# Games_Projects

./: .gitignore  README.md  coding-games.ipynb  crypto_bot.py  crypto_data.json  crypto_prices.json  pyproject.toml  requirements.txt
crypto-game/: crypto_bot.py  crypto_prices.json
notebooks/: snake.py
snake-game/: snake.py
