[tool.poetry]
name = "games-projects"
version = "0.1.0"
description = "scripts de different jeu simple"
authors = ["camille"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
random2 = "^1.0.2"
pythonturtle = "^0.3.2"
requests = "^2.32.3"
matplotlib = "^3.10.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
my-package = "^0.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
